rev_16-Jun_02-04_42

28 Feb 2013
Added support for interwiki links

3 March
Added missing preprocessor support for interwikilinks.
Added support for smaba shares in link.js (plugin)

4 March
Added support for Samba editor window selections (link.js)
Rationlized some of the code in link.js 

6 March
Check for files and/or directories in userfiles that have not been converted into
links to data/media or have been converted to directories (Weatherwas). If found
delete them so that the links can be created.

7 Mar
Re-compressed script.js to include _getSelection

Fix for IE 10 XPATH/httpRequest failure in  fckxml.js

9 March
Set minimum width for tables at 50%.  
Made default template for editor the dokuwiki css.
Update of ckeditor's table plugin and begin update of table properties plugin.
Finished updating cell properties dialog.

10 March
Compressed smileys dialog
Added ckgeditor version to CKEditor's about app

11 March
Fixed CKEditor bug in special characters plugin which failed to load in the extraSpecialChars
from config.js.

15 March
Removed potential recognition conflict between local filebrowser and media browser. Setting local to false in
link onLoad.

Fixed filebrowser so that it now works properly in both Debain/Ubuntu and other
linux distributions.

17 March
Removed _getSelection from script.js, using Dokuwiki's getSelection when textArea is not null.
Synced some compressed plugins with gitHub.

19 March
Removed file size from link titles, which in fckgLite corrputed internal media links.

20 March
Updated entities database.

Fixed path specs and path regex in config.php for Windows.

21 March
Merged version for all OSes including windows : no longer needs separate version for Ubuntu/Debian package manager.

24 March
Handle multiple footnotes with identical texts.

25 March
Re-inserted accidentally missing code for creating geshi code blocks in edit.php
