@@ -1,4 +1,4 @@
-rev_16-Jun_02-04_42
+rev_16-Jun_02-06_01
 
 28 Feb 2013
 Added support for interwiki links
@@ -910,4 +910,5 @@ Fix to hide captcha error.
 
 2 Jun
 Updated script-cmpr.js
+Changed plugin-captcha check to plugin_isdisabled()
 
